crates/keron-lang/tests/corpus/errors/check/fn_arg_type_mismatch.keron
fn double(n: Int): Int { n * 2 }
val x: Int = double("hello")
